// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-checkbox.vue Demo-Basic 1`] = `
<div>
  <label class="root" tabindex="0">
    <span class="box" status="false"></span>
    <span vusion-slot-name="item">Checkbox </span>
  </label>
</div>
`;

exports[`u-checkbox.vue Demo-Disabled 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <label class="root" tabindex="0">
      <span class="box" status="true"></span>
      <span vusion-slot-name="item">Readonly </span>
    </label>
    <label class="root" disabled="disabled" tabindex="0">
      <span class="box" disabled="disabled" status="true"></span>
      <span vusion-slot-name="item">Disabled </span>
    </label>
  </div>
</div>
`;

exports[`u-checkbox.vue Demo-Indeterminate 1`] = `
<div>
  <label class="root" tabindex="0">
    <span class="box" status="null"></span>
    <span vusion-slot-name="item">Indeterminate </span>
  </label>
</div>
`;

exports[`u-checkbox.vue Demo-v-model 1`] = `
<label class="root" tabindex="0">
  <span class="box" status="true"></span>
  <span vusion-slot-name="item">true </span>
</label>
`;
